--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:installLocation="auto"
-    package="de.mide.datumsdifferenz">
+    package="de.mide.datumsdifferenz"
+    android:installLocation="auto">
 
     <application
         android:allowBackup="true"
