--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 
 android {
     namespace 'de.mide.datumsdifferenz'
-    compileSdk 34
+    compileSdk 36
 
     defaultConfig {
         applicationId "de.mide.datumsdifferenz"
         minSdk 24
-        targetSdk 34
+        targetSdk 36
         versionCode 1
         versionName "1.0"
 
@@ -23,8 +23,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 }
 
@@ -39,6 +39,5 @@ dependencies {
     androidTestImplementation libs.espresso.core
 
     // neueste Version von "joda-time": https://mvnrepository.com/artifact/joda-time/joda-time
-    implementation 'joda-time:joda-time:2.13.0'
-
+    implementation 'joda-time:joda-time:2.14.0'
 }
